# diaremot2-ai

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_CLOUD.md  AGENTS_FACTCHECK.md  AI_INDEX.yaml  AI_INDEX_AUDIT.md  AI_INDEX_CORRECTIONS.md  CHANGE_PLAN.md  CLAUDE.md  DOCUMENTATION_STATUS.md  DOCUMENTATION_UPDATES.md  END_TO_END_TEST_REPORT.md  README.md  README_CLOUD.md  README_NEW.md  SMOKE_TEST_RESULTS.md  SYMBOLS_INDEX.csv  WINDOWS_MODEL_PATHS.md  audio_pipeline_core.py  check_att.py  check_models.py  check_path.py  check_site.py  diaremot2-ai.code-workspace  export_panns_onnx.py  maint-codex.ps1  maint-codex.sh  maintenance.sh  pyproject.toml  repo_scan_report.md  requirements.txt  setup-codex.sh  setup.ps1  setup.sh  sitecustomize.py  speaker_registry.json  tmp_apply_site.py  tmp_check.py  tmp_check_backend.py  (+13 more)
.amazonq/rules/memory-bank/: guidelines.md  product.md  structure.md  tech.md
.claude/: settings.local.json
.github/: copilot-instructions.md
connector/: app.py
diaremot2-1/: .gitignore  AGENTS.md  check_models.py  check_path.py  export_panns_onnx.py  local_onnx_sed.json
docs/: golden_audio_regression_suite.md  refactor_analysis.md
packaging/: diaremot_gui.spec
runs/8b79690f-8909-443b-8c6d-3c0e4a2e7b6c/: summary.html
runs/latest/: diarized_transcript_with_emotion.csv  qc_report.json  segments.jsonl  speakers_summary.csv  summary.html  timeline.csv
scripts/: ser_dpngtm_local.py
ser8-onnx/: config.json  special_tokens_map.json  tokenizer_config.json
src/: audio_pipeline_core.py
src/diaremot/: AGENTS.md  README.md  __init__.py  cli.py
src/diaremot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/diaremot/affect/: __init__.py  emotion_analysis.py  emotion_analyzer.py  paralinguistics.py  sed_panns.py  sed_timeline.py  ser_dpngtm.py  ser_onnx.py
src/diaremot/gui/: __init__.py  __main__.py  app.py
src/diaremot/io/: __init__.py  download_utils.py  onnx_runtime_guard.py  onnx_utils.py  speaker_registry_manager.py
src/diaremot/pipeline/: __init__.py  audio_pipeline_core.py  audio_preprocessing.py  auto_tuner.py  cache_env.py  cli_entry.py  config.py  cpu_optimized_diarizer.py  dependency_checks.py  diagnostics_smoke.py  logging_utils.py  orchestrator.py  outputs.py  pipeline_checkpoint_system.py  pipeline_config.py  pipeline_diagnostic.py  pipeline_healthcheck.py  provider_registry.py  run_pipeline.py  runtime_env.py  speaker_diarization.py  transcription_module.py  validate_system_complete.py
src/diaremot/pipeline/stages/: __init__.py  affect.py  asr.py  auto_tune.py  base.py  dependency_check.py  diarize.py  paralinguistics.py  preprocess.py  summaries.py  utils.py
src/diaremot/sed/: __init__.py  sed_panns_onnx.py  sed_yamnet_tf.py
src/diaremot/summaries/: __init__.py  conversation_analysis.py  html_summary_generator.py  pdf_summary_generator.py  speakers_summary_builder.py
src/diaremot/utils/: hash.py  model_paths.py
tests/: conftest.py  qc_report.json  test_cli.py  test_connector_app.py  test_dependency_integrity.py  test_diarization_defaults.py  test_emotion_imports.py  test_emotion_intent_model_path.py  test_emotion_text_tokenizer.py  test_intent_onnx.py  test_no_merge_conflicts.py  test_orchestrator_affect_overrides.py  test_orchestrator_para_fallback.py  test_package_exports.py  test_pipeline_auto_tuner.py  test_pipeline_checkpoint_manager.py  test_pipeline_cli_entry_module.py  test_pipeline_config_module.py  test_pipeline_logging_utils_module.py  test_pipeline_outputs_module.py  test_pipeline_stages_module.py  test_run_pipeline_shim.py  test_runtime_env.py  test_sed_cli.py  test_sed_hysteresis.py  test_silero_wrapper.py  test_speaker_registry.py  test_stageguard.py
tools/: __init__.py  bart_cli_utils.py  bart_tokenizer_inspect.py  extract_bart_merges_vocab.py  repo_scan.py  smoke_affect_onnx.py  smoke_text_only.py  test_tokenizer_bart.py  warmup_faster.py
