[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diaremot"
version = "2.1.0"
description = "DiaRemot CPU-only speech affect and transcription pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
keywords = ["speech", "diarization", "emotion", "cli"]
dependencies = [
    "numpy==1.24.4",
    "scipy==1.10.1",
    "librosa==0.10.2.post1",
    "numba==0.59.1",
    "llvmlite==0.42.0",
    "resampy==0.4.2",
    "soundfile==0.12.1",
    "praat-parselmouth==0.4.3",
    "torch==2.4.1+cpu",
    "torchaudio==2.4.1+cpu",
    "torchvision==0.19.1+cpu",
    "ctranslate2==4.6.0",
    "faster-whisper==1.1.0",
    "openai-whisper==20231117",
    "transformers==4.38.2",
    "huggingface_hub==0.24.6",
    "onnxruntime==1.17.1",
    "pydantic==2.8.2",
    "packaging==24.1",
    "typer==0.9.0",
    "rich==13.7.1",
    "audioread==3.0.1",
    "ffmpeg-python==0.2.0",
    "reportlab==4.1.0",
    "scikit-learn==1.3.2",
]

[project.scripts]
diaremot = "diaremot.cli:app"
diaremot-diagnostics = "diaremot.cli:main_diagnostics"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
