[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diaremot"
version = "2.1.0"
description = "CPU-only speech intelligence pipeline (diarization + ASR + affect + SED + paralinguistics)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name="DiaRemot Authors"}]
keywords = ["speech", "diarization", "emotion", "sed", "asr", "whisper", "onnx", "cpu", "paralinguistics"]

[project.scripts]
diaremot = "diaremot.cli:app"
diaremot-diagnostics = "diaremot.cli:main_diagnostics"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["build", "dist", ".venv", ".cache"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
select = ["E","F","I","UP","B","C4","ARG","SIM","PGH"]
ignore = ["E203"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["diaremot"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]